fixing author spacing

--- a/_sass/author-info.scss
+++ b/_sass/author-info.scss
@@ -59,8 +59,11 @@
 }
 
 .author-container .clearfloat{
-    padding-top: 40px;
-	display: block;
+   margin-top: 40px;
+    display: block;
+    width: 100%;
+    height: 20px;
+    content: "";
 }
 
 @media (max-width: 820px) {
